# BeaverQuest

./: .gitignore  CONTRIBUTING.md  README.md  attach.bat  attach.py  copilot.md  debug.bat  debug.py  design_doc.md  game_objects.py  game_state.py  git_shortcuts.txt  main.py  player.py  pyproject.toml  requirements.txt  run.bat  run.py  setup_env.bat  setup_env.sh  ui.py  utils.py
.github/: copilot-instructions.md
docs/: GAME_README.md  TEST_PLAN.md  design_doc.md
examples/: game_example.py
scripts/: run_game.py  validate_build.py
src/newgame/: __init__.py  main.py
src/newgame/config/: __init__.py  constants.py  settings.py
src/newgame/core/: __init__.py  game.py  game_state.py
src/newgame/entities/: __init__.py  food.py  objects.py  player.py
src/newgame/systems/: __init__.py  ui.py
src/newgame/utils/: math.py
tests/: __init__.py  conftest.py  test_game_objects.py  test_player.py  test_smoke.py  test_utils.py
